<resources>
    <string name="app_name">Ground Booking</string>
    <string name="action_settings">Settings</string>
    <string name="first_name">First Name</string>
    <string name="middle_name">Middle Name</string>
    <string name="last_name">Last Name</string>
    <string name="user_registration_title">User Registration</string>
    <string name="next">Next</string>
    <string name="finish">Finish</string>
    <string name="dob">Date of Birth</string>
    <string name="email">E-mail</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="text_login">Phone Number or Email</string>
    <string name="text_pass">Password</string>
    <string name="text_forgot_pass">Forgot Password?</string>
    <string name="text_button_login">Login</string>
    <string name="text_or">OR</string>
    <string name="text_sign_up">Create New Account</string>
    <string name="title_activity_user_home">UserHomeActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>
    <string name="title_activity_test">test</string>


    <string name="nav_header_title">Welcome</string>
    <string name="nav_header_subtitle">Mohit</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="ground1">Shiva Ji stadium</string>
    <string name="ground2">Subbu Stadium</string>
    <string name="ground3">Tal Katora stadium</string>
    <string name="ground4">Pratibha stadium</string>
    <string name="groundRent1">300</string>
    <string name="groundRent2">3500</string>
    <string name="groundRent3">3300</string>
    <string name="groundRent4">10000</string>
    <string name="groundDistance1">1Km</string>
    <string name="groundDistance2">2Km</string>
    <string name="groundDistance3">3KM</string>
    <string name="groundDistance4">4KM</string>
    <string name="groundCity1">Mandi</string>
    <string name="groundCity2">Sekhpura</string>
    <string name="groundCity3">Ghaziabaad</string>
    <string name="groundCity4">Kotdwar</string>
    <string name="book">Book</string>
    <string name="title_activity_add_ground">AddGroundActivity</string>
    <string name="new_ground_image_des">Click Image or Choose from gallery</string>


</resources>
